tests/baselines/reference/multipleBaseInterfaesWithIncompatibleProperties.errors.txt
==== tests/cases/compiler/multipleBaseInterfaesWithIncompatibleProperties.ts (1 errors) ====
    interface A<T>
    {
        x: T
    }
    
    interface C extends A<string>, A<number> { }
              ~
!!! multipleBaseInterfaesWithIncompatibleProperties.ts(6,11): error TS2189: Interface 'C' cannot simultaneously extend types 'A<string>' and 'A<number>':
!!! Named properties 'x' of types 'A<string>' and 'A<number>' are not identical.
    